# python-dev-environment-example

./: LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: format_sample.py  mypy_sample.py  organize_import_sample.py  ruff_sample.py
