[tool.poetry]
name = "python-dev-environment-example"
version = "0.1.0"
description = ""
authors = ["Yuki Oshima <39944763+os1ma@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.0"
pyarrow = "^15.0.0"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.1.4.231227"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "N"]
